// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider component renders horizontal divider 1`] = `
@media  {
  .c-fNKiiB {
    border: 0;
    background: var(--colors-tonal100);
  }
}

@media  {
  .c-fNKiiB-jokUAR-orientation-horizontal {
    height: 1px;
    width: 100%;
  }
}

<div>
  <hr
    class="c-fNKiiB c-fNKiiB-jokUAR-orientation-horizontal"
  />
</div>
`;

exports[`Divider component renders vertical divider 1`] = `
@media  {
  .c-fNKiiB {
    border: 0;
    background: var(--colors-tonal100);
  }
}

@media  {
  .c-fNKiiB-jokUAR-orientation-horizontal {
    height: 1px;
    width: 100%;
  }

  .c-fNKiiB-fKZlxR-orientation-vertical {
    height: 100%;
    width: 1px;
    min-height: var(--sizes-3);
  }
}

<div>
  <hr
    class="c-fNKiiB c-fNKiiB-fKZlxR-orientation-vertical"
  />
</div>
`;
